[package]
name = "pingora-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gateway"
path = "src/main.rs"

[[bin]]
name = "mcp-client"
path = "src/client.rs"

[dependencies]
arc-swap = "1.7"
async-trait = "0.1.89"
bytes = "1.11.1"
pingora = { version = "0.8.0", features = ["proxy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
tokio = { version = "1.50.0", features = ["full"] }

# MCP client dependencies - rust-mcp-sdk for SSE transport support
rust-mcp-sdk = { version = "0.8", features = ["client", "sse"] }
tokio-stream = "0.1"
