[package]
name = "pin-gateway"
version = "0.1.0"
edition = "2021"
default-run = "gateway"

[[bin]]
name = "gateway"
path = "src/main.rs"



[dependencies]
arc-swap = "1.7"
async-trait = "0.1.89"
bytes = "1.11.1"
pingora = { version = "0.8.0", features = ["proxy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
tokio = { version = "1.50.0", features = ["full"] }

# MCP client dependencies - rust-mcp-sdk for SSE transport support
rust-mcp-sdk = { version = "0.8", features = ["client", "sse"] }
tokio-stream = "0.1"

# Benchmark dependencies
rmcp = { version = "1.2.0", features = ["client", "transport-streamable-http-client-reqwest"] }
clap = { version = "4.4", features = ["derive"] }

# Performance optimizations
once_cell = "1.21"
regex = "1.11"
rustc-hash = "2.1"
http = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
split-debuginfo = "off"
debug = true

# Maximum optimization level
opt-level = 3
# Fat LTO for whole-program optimization
lto = "fat"
# Single codegen unit for better optimization across crate boundaries
codegen-units = 1
# Abort on panic to reduce binary size and improve performance
panic = "abort"

# Profile for benchmarking with debug symbols (for perf/flamegraph)
[profile.bench]
inherits = "release"
strip = true
debug = false
